# ruemai-server

./: .env.example  .env.sample  .gitignore  DEMO-AUTOMATION.md  README.md  env.example  main.py  package-lock.json  package.json  puppeteer-plan.json  pyproject.toml  start-dev-windows.bat  test-application-features.js  test-automated-demo.js  test-comprehensive-scraping.js  test-crawl-dump.js  test-create-demo-integrated.js  test-debug-ui.js  test-deep-interactive-scraping.js  test-demo-automation.js  test-feature-extraction.js  test-product-tour.js  test-react-app-crawl.js  test-server.js  test-ui-debug.js
app/: __init__.py
app/demo_automation/: __init__.py  routes.py  service.py
app/services/: browser_automation.py  gemini_service.py  llm_service.py
app/voice_agent/: __init__.py  agent.py  prompts.py  routes.py  service.py  tools.py
src/: app.module.ts  main.ts
src/ai/: ai.service.ts
src/browser/: browser.service.ts
src/cache/: cache.service.ts
src/config/: config-validation.service.spec.ts  config-validation.service.ts  config.module.ts
src/demo-automation/: demo-automation.controller.ts  demo-automation.dto.ts  demo-automation.module.ts  demo-automation.service.ts  test-demo-automation.ts
src/document-parser/: document-parser.module.ts  document-parser.service.ts
src/dto/: demo-automation.dto.ts  extraction.dto.ts
src/extraction/: extraction.controller.ts  extraction.module.ts  extraction.service.ts
src/extractor/: extractor.controller.ts  (+2 more)
test/: demo-automation.e2e-spec.ts  jest-demo-automation.json  setup-demo-automation.ts
(+48 files in other folders)
